--- a/package.json
+++ b/package.json
@@ -11,12 +11,16 @@
     "test": "yarn workspaces run test"
   },
   "devDependencies": {
-    "zx": "^7.2.0",
     "@typechain/hardhat": "^6.1.5",
+    "find-config": "^1.0.0",
     "solidity-docgen": "^0.6.0-beta.35",
-    "find-config": "^1.0.0"
+    "zx": "^7.2.0"
   },
   "volta": {
     "node": "16.19.1"
+  },
+  "dependencies": {
+    "@pancakeswap/v3-core": "^1.0.2",
+    "@pancakeswap/v3-periphery": "^1.0.2"
   }
 }
